2002-06-10  Darin Adler  <darin@apple.com>

	* khtml/css/cssstyleselector.cpp: Fix uninitialized variable warning.

2002-06-10  Darin Adler  <darin@apple.com>

	Merged in changes from KDE 3.0.1.

	* kwq/kdecore/kurl.h:
	* kwq/KWQKURL.mm: (operator==): New, needed by some 3.0.1 code.

	* kwq/qt/qpalette.h: Add QPalette::NColorGroups and QColorGroup::NColorRoles.
	* kwq/KWQPalette.mm: Simplify by getting rid of "private" indirection.
	(QPalette::color): New, needed by some 3.0.1 code.
	* kwq/KWQColorGroup.mm: Simplify by getting rid of "private" indirection.

	* kwq/qt/qstring.h:
	* kwq/KWQString.mm: (QConstString::QConstString): Change parameter to const QChar *
	to match Qt so we compile.

	* kwq/qt/qtextedit.h:
	* kwq/KWQTextEdit.mm: (QTextEdit::setTabStopWidth): Add unimplemented placeholder,
	needed by some 3.0.1 code.

	* kwq/qt/qvaluelist.h:
	* kwq/KWQValueListImpl.h:
	* kwq/KWQValueListImpl.mm: Simplify implementation.

	* WebCore-tests.exp: Update for changes in QValueList implementation.

	* kwq/kdecore/klibloader.h: Add include of <kio/global.h> to make something compile.

	* kwq/khtml/java/kjavaappletcontext.h: Add JType and constructor that takes DCOPObject*.

	* kwq/kio/global.h: Add KIO::CacheControl.

	* khtml/css/css_ruleimpl.cpp:
	* khtml/css/css_ruleimpl.h:
	* khtml/css/css_stylesheetimpl.cpp:
	* khtml/css/css_stylesheetimpl.h:
	* khtml/css/css_valueimpl.cpp:
	* khtml/css/css_valueimpl.h:
	* khtml/css/cssparser.cpp:
	* khtml/css/cssparser.h:
	* khtml/css/cssstyleselector.cpp:
	* khtml/css/cssstyleselector.h:
	* khtml/css/html4.css:
	* khtml/dom/css_rule.cpp:
	* khtml/dom/css_rule.h:
	* khtml/dom/css_stylesheet.cpp:
	* khtml/dom/css_stylesheet.h:
	* khtml/dom/css_value.cpp:
	* khtml/dom/dom2_events.cpp:
	* khtml/dom/dom2_range.cpp:
	* khtml/dom/dom2_range.h:
	* khtml/dom/dom2_views.cpp:
	* khtml/dom/dom_doc.cpp:
	* khtml/dom/dom_element.cpp:
	* khtml/dom/dom_exception.h:
	* khtml/dom/dom_node.cpp:
	* khtml/dom/dom_string.cpp: